# rust_curl

./: .gitignore  Cargo.toml  Cargo.toml~  README.md  test.blob
src/: main.rs
