[package]
name = "rust_curl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
clap = { version = "3.1.18", features = ["derive"] }
http = "0.2.7"
reqwest = { version = "0.11.10", features = ["blocking"] }
